Fix a small z-index issue

--- a/public/css/stream.less
+++ b/public/css/stream.less
@@ -63,12 +63,6 @@
 							color:#111;
 						}
 					}
-					a.image:after{
-						content:" ⚲";
-						color:#111;
-						font-weight:bold;
-						font-size:13px;
-					}
 					&:after{
 						/*reserve space for .actions*/
 						content:"\00a0";
@@ -78,12 +72,14 @@
 					
 					.image-preview{
 						position:relative;
-						z-index:1;
+						width:10px;
+						overflow:hidden;
 						img{
 							height: 12px;
 						}
 						&:hover{
 							img{
+								z-index:1;
 								position:absolute;
 								height:150px;
 							}
